--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
-dist
+# dist            <-- REMOVED so GitHub Pages can use it
 dist-ssr
 *.local
 
