--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -12,20 +12,26 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0   # IMPORTANT FIX
+          fetch-depth: 0   # Ensures correct build
 
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 18
-          cache: npm      # Better caching for Vite builds
+          cache: npm
 
       - name: Install dependencies
         run: npm install
+
+      - name: Create .env.production file from GitHub Secrets
+        run: |
+          echo "VITE_SUPABASE_URL=${{ secrets.VITE_SUPABASE_URL }}" >> .env.production
+          echo "VITE_SUPABASE_ANON_KEY=${{ secrets.VITE_SUPABASE_ANON_KEY }}" >> .env.production
 
       - name: Build
         run: npm run build
@@ -38,6 +44,7 @@ jobs:
   deploy:
     needs: build
     runs-on: ubuntu-latest
+
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
